<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.MainActivity">


    <LinearLayout

        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:text="@string/appname"
            android:textColor="@color/darkblue"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/spartan_thin"
            android:gravity="center"
            android:text="@string/connect"
            android:textColor="#02153E"
            android:textSize="@dimen/_13sdp"

            android:textStyle="bold|italic" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/spartan_thin"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/spartan_regular"
            android:gravity="center"/>
    </LinearLayout>


</RelativeLayout>